# epid-forecasting-mcp

./: .env.example  .gitignore  Dockerfile  Influenza_bulletin_integration_README.md  README.md  epid_forecasting_server.py  pyproject.toml  requirements.txt  version3_di.py  version4_di.py
data/: influenza_weather_spb_dataset.csv
epid_forecasting/: __init__.py  br_calibration.py  bulletin_context.py  bulletin_renderer.py  config.py  explainability.py  features.py  influenza_db.py  modeling.py  s3_service.py  seasonal_analysis.py  service.py  storage.py  weather_source.py
outputs_examples/: di_first_mcp_br_estimate_output.txt  di_first_mcp_br_forecast_output.txt  di_output_br_estimate.txt  di_output_br_forecast.txt  di_prepare_influenza_bulletin_context_output.txt  output_br_estimate.txt  output_br_forecast.txt  output_prepare_influenza_bulletin_context.txt
tests/: test_br_calibration.py  test_bulletin_context.py  test_bulletin_renderer.py  test_core.py  test_explainability.py  test_influenza_db.py  test_seasonal_analysis.py  test_server_contract.py  test_storage.py  test_weather_source.py
