[project]
name = "epid-forecasting-mcp-server"
version = "0.1.0"
description = "FastMCP server for static weekly influenza forecasting with conformal intervals"
authors = [
  { name = "CoScientist" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastmcp>=3.1.0,<4.0.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.4,<2.0",
  "joblib>=1.4,<2.0",
  "python-dotenv>=1.0,<2.0",
  "boto3>=1.42.68,<2.0"
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["epid_forecasting"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
