[project]
name = "epid-forecasting-mcp-server"
version = "0.3.0"
description = "Compact FastMCP server for fixed weekly influenza forecasting with conformal intervals"
authors = [
  { name = "CoScientist" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastmcp>=3.1.0,<4.0.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.4,<2.0",
  "python-dotenv>=1.0,<2.0",
  "boto3>=1.34,<2.0",
  "requests>=2.31,<3.0",
  "shap>=0.45,<0.51",
  "matplotlib>=3.8,<4.0",
  "scipy>=1.10,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["epid_forecasting"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
